status of the project added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <link href="style.css" rel="stylesheet"/>
     <meta charset="UTF-8">
@@ -12,8 +12,13 @@
 
 </head>
 <body>
+    <h1>Hola Extraño ,gracias por visitar. Esto está WorkInProgress 🛠️👨🏻‍💻</h1>
+    <h1 class="translated"> Hey Xtranger, this is WorkInProgress 👨🏻‍💻, thanks for visiting! 🛠️</h1>
+    <h4>————————————————————————————————————————————————————————————————————————————————————</h4>
     <div>
+    
     <div class="jobDescription extraSpace">
+    
     <h2>Product Designer</h2>
     <h3>at PSH - @Follett</h3>
     <h3 class="industryType">edutech</h4>
