Header added and visual fixes

--- a/index.html
+++ b/index.html
@@ -12,21 +12,37 @@
 
 </head>
 <body>
-    <h1>Hola Extraño ,gracias por visitar. Esto está WorkInProgress 🛠️👨🏻‍💻</h1>
-    <h1 class="translated"> Hey Xtranger, this is WorkInProgress 👨🏻‍💻, thanks for visiting! 🛠️</h1>
-    <h4>————————————————————————————————————————————————————————————————————————————————————</h4>
-    <div> 
-    <div class="jobDescription extraSpace">
-        <h4>My Last experience</h4>
+    <h4>Hola Extraño ,gracias por visitar. Esto está WorkInProgress 🛠️👨🏻‍💻</h4>
+    <h4 class="translated"> Hey Xtranger, this is WorkInProgress 👨🏻‍💻, thanks for visiting! 🛠️</h4>
+    <h4 class="separator">————————————————————————————————————————————————————————————————————————————————————</h4>
+    <br><br>
+    <div> <div class="flexing">
+        <div>
+        <h2>Lenin Cuadra</h2>
+        <h3 >PRODUCT DESIGNER <br>UX/UI</h3>
+        <h4 class="separator">———————————————</h4>
+        <h4 class="subTitle">4+ YEARS OF EXPERIENCE</h4>
+        
+        </div>
+        <div>
+        <p>
+            I'm an experienced UX/UI and Product Design professional, excelling in creative problem-solving. Grounded in Design Thinking,
+            I strategically craft meaningful user experiences.I collaborate seamlessly with cross-functional teams, engaging developers, designers, and product managers, ensuring a holistic approach to product design.
+        </p>
+         </div>
+        </div>
+    <div class="jobDescription">
+
+        <h4>Current Job</h4>
 
     <h2>Product Designer</h2>
     <h3>at PSH - @Follett</h3>
-    <h3 class="industryType">edutech</h4>
+    <h3 class="subTitle">edutech</h4>
     <div class="space">
         <h4>KEY DESIGNED PRODUCT</h4> <h4 class="tags">SAAS</h4>
     </div>
     <p>Optimized the adoption process for course materials and supplies in an app primarily focused on Concierge and Faculty users, easing their workload and ultimately delivering value to students as the end users.</p>
-    </div>
+    
     <ul>
         <li>Guided the design process from concept to implementation, facilitating smooth transitions and successful project outcomes.</li>
         <li>Collaborated closely with leadership to transform feature requests from ideation to delivery.</li>
@@ -52,6 +68,8 @@
 <p class="tags">Design Thinking</p>
 <p class="tags">Agile</p>
 </div>
+</div>
+
 </div>
 <div></div>
    
