just learned how Network works

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <button>Saludos desde el servidor Local</button>
     <h4>Hola Extraño ,gracias por visitar. Esto está WorkInProgress 🛠️👨🏻‍💻</h4>
     <h4 class="translated"> Hey Xtranger, this is WorkInProgress 👨🏻‍💻, thanks for visiting! 🛠️</h4>
     <h4 class="separator">————————————————————————————————————————————————————————————————————————————————————</h4>
