first try, first lose vs JS -Trying to add a counter to show a different text in the product built section

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 
     <h2>Product Designer</h2>
     <h3>at PSH - @Follett</h3>
-    <h3 class="subTitle">edutech</h4>
+    <h3 class="subTitle">edutech</h3>
     <div class="space">
-        <h4>KEY DESIGNED PRODUCT</h4> <h4 class="tags">SAAS</h4>
+        <h4 id="changeText"></h4> <h4 class="tags" id="type">SAAS</h4>
     </div>
+    <button onclick="countingProd()">Cuentala menorl</button>
     <p>Optimized the adoption process for course materials and supplies in an app primarily focused on Concierge and Faculty users, easing their workload and ultimately delivering value to students as the end users.</p>
     
     <ul>
