My first product going life

--- a/myFirstProduct-LETSDOIT/1stProductEVER.html
+++ b/myFirstProduct-LETSDOIT/1stProductEVER.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1stProdEVER</title>
     <link rel="stylesheet" href="../style.css" />
+    <script src="1stProductEVER.js"></script>
   </head>
   <body>
     <h1>Hello!</h1>
+    <div><p class="subTitle">Ahora lo ves...</p></div>
     <ul>
       <li>1 text-o</li>
-      <li>2 round</li>
+      <li id="id1">2 round</li>
       <li>3 alojas</li>
       <li>4 ballabamarcas</li>
-      <div><p class="subTitle">Ahora lo ves...</p></div>
+      <button onclick="kambioText()">Cambiala menorl!</button>
     </ul>
   </body>
 </html>
