ConsoleLog es la forma mas simple para resolver los problemas en js

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <script src="script.js"></script>
     <link href="style.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -53,8 +54,8 @@
         <h3>at PSH - @Follett</h3>
         <h3 class="subTitle">edutech</h3>
         <div class="space">
-          <h4 id="changeText"></h4>
-          <h4 class="tags" id="type">SAAS</h4>
+          <h4 id="changeId">Aca cambia</h4>
+          <h4 id="type">SAAS</h4>
         </div>
         <button onclick="countingProd()">Cuentala menorl</button>
         <p>
