this = is not the same as this === I had the ability to spot that and solve the bug by mylself

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
         <h3 class="subTitle">edutech</h3>
         <div class="space">
           <h4 id="changeId">Aca cambia</h4>
-          <h4 id="type">SAAS</h4>
+
+          <h4 class="keyProduct">SAAS</h4>
+          <h4 class="keyProduct">SAAS</h4>
         </div>
         <button onclick="countingProd()">Cuentala menorl</button>
         <p>
