My first Refactor on CSS - WIP

--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <title>v.2 - (css)Lenin Cuadra - Resume</title>
     <script src="script.js"></script>
     <link href="style.css" rel="stylesheet" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Lenin Cuadra - Resume</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
+    <div">
     <h4>Hola Extraño ,gracias por visitar. Esto está WorkInProgress 🛠️👨🏻‍💻</h4>
     <h4 class="translated">
       Hey Xtranger, this is WorkInProgress 👨🏻‍💻, thanks for visiting! 🛠️
@@ -28,31 +29,72 @@
       <div class="flexing">
         <div>
           <h2>Lenin Cuadra</h2>
-          <h3>
-            PRODUCT DESIGNER
-            <br />
-            UX/UI
-          </h3>
+          <h3>PRODUCT DESIGNER UX/UI</h3>
           <h4 class="separator">———————————————</h4>
           <h4 class="subTitle">4+ YEARS OF EXPERIENCE</h4>
         </div>
         <div>
           <p>
-            I'm an experienced UX/UI and Product Design professional, excelling
-            in creative problem-solving. Grounded in Design Thinking, I
-            strategically craft meaningful user experiences.I collaborate
-            seamlessly with cross-functional teams, engaging developers,
-            designers, and product managers, ensuring a holistic approach to
-            product design.
+            <strong>I'm an experienced UX/UI and Product Design</strong>
+            professional, excelling in creative problem-solving. Grounded in
+            Design Thinking,
+            <strong>I strategically craft meaningful user experiences.</strong>
           </p>
+          <p>
+            <strong>Collaborate seamlessly with cross-functional teams</strong>
+            engaging developers, designers, and product managers,
+            <strong>a holistic approach to product design.</strong>
+          </p>
+        </div>
+        <div>
+          <div>
+            <h3>Contact Info</h3>
+            <ul>
+              <li>
+                <a href="leningraphic@gmail.com">leningraphic@gmail.com</a>
+              </li>
+              <li>
+                <a href="phone">549-3513766049</a>
+              </li>
+              <li></li>
+            </ul>
+          </div>
+          <div>
+            <h3>Portfolio</h3>
+            <ul>
+              <li>
+                <a href="leningraphic@gmail.com">Website</a>
+              </li>
+              <li>
+                <a href="phone">Linkedin</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="jobDescription">
-        <h4>Current Job</h4>
-
-        <h2>Product Designer</h2>
+        <div>
+          <div class="flexing">
+            <h2>Product Designer</h2>
+            <div class="gap">
+              <h4 class="keyProduct">B2B</h4>
+              <h4 class="keyProduct">CORPORATION</h4>
+            </div>
+          </div>
+        </div>
         <h3>at PSH - @Follett</h3>
-        <h3 class="subTitle">edutech</h3>
+        <div>
+          <h3 class="subTitle">edutech</h3>
+          <div class="space">
+            <h4>MAR/2024</h4>
+            <h4>MAR/2024</h4>
+          </div>
+
+          <div>
+            <h4>MAR/2024</h4>
+            <h4>MAR/2024</h4>
+          </div>
+        </div>
         <div class="space">
           <h4 id="changeId">Aca cambia</h4>
 
