Refactor dia  - me hace falta comprender como funciona bien la estructura en CSS

--- a/index.html
+++ b/index.html
@@ -25,125 +25,135 @@
     </h4>
     <br />
     <br />
-    <div>
-      <div class="flexing">
-        <div>
-          <h2>Lenin Cuadra</h2>
-          <h3>PRODUCT DESIGNER UX/UI</h3>
-          <h4 class="separator">———————————————</h4>
-          <h4 class="subTitle">4+ YEARS OF EXPERIENCE</h4>
-        </div>
-        <div>
-          <p>
-            <strong>I'm an experienced UX/UI and Product Design</strong>
-            professional, excelling in creative problem-solving. Grounded in
-            Design Thinking,
-            <strong>I strategically craft meaningful user experiences.</strong>
-          </p>
-          <p>
-            <strong>Collaborate seamlessly with cross-functional teams</strong>
-            engaging developers, designers, and product managers,
-            <strong>a holistic approach to product design.</strong>
-          </p>
-        </div>
-        <div>
+    <article>
+      <section>
+        <div class="flexing">
           <div>
-            <h3>Contact Info</h3>
-            <ul>
-              <li>
-                <a href="leningraphic@gmail.com">leningraphic@gmail.com</a>
-              </li>
-              <li>
-                <a href="phone">549-3513766049</a>
-              </li>
-              <li></li>
-            </ul>
+            <h2>Lenin Cuadra</h2>
+            <h3>PRODUCT DESIGNER UX/UI</h3>
+            <h4 class="separator">———————————————</h4>
+            <h4 class="subTitle">4+ YEARS OF EXPERIENCE</h4>
           </div>
           <div>
-            <h3>Portfolio</h3>
-            <ul>
-              <li>
-                <a href="leningraphic@gmail.com">Website</a>
-              </li>
-              <li>
-                <a href="phone">Linkedin</a>
-              </li>
-            </ul>
+            <p>
+              <strong>I'm an experienced UX/UI and Product Design</strong>
+              professional, excelling in creative problem-solving. Grounded in
+              Design Thinking,
+              <strong>
+                I strategically craft meaningful user experiences.
+              </strong>
+            </p>
+            <p>
+              <strong>
+                Collaborate seamlessly with cross-functional teams
+              </strong>
+              engaging developers, designers, and product managers,
+              <strong>a holistic approach to product design.</strong>
+            </p>
           </div>
-        </div>
-      </div>
-      <div class="jobDescription">
-        <div>
-          <div class="flexing">
-            <h2>Product Designer</h2>
-            <div class="gap">
-              <h4 class="keyProduct">B2B</h4>
-              <h4 class="keyProduct">CORPORATION</h4>
+          <div>
+            <div>
+              <h3>Contact Info</h3>
+              <ul>
+                <li>
+                  <a
+                    href="mailto:leningraphic@gmail.com?subject=I'm%20reaching%20out%20to%20you,%20Lenin!"
+                  >
+                    leningraphic@gmail.com
+                  </a>
+                </li>
+                <li>
+                  <a href="tel:+5493513766049">549-3513766049</a>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <h3>Portfolio</h3>
+              <ul>
+                <li>
+                  <a href="https://bit.ly/3BUoBSr">Website</a>
+                </li>
+                <li>
+                  <a href="https://bit.ly/3A6ygVI">Linkedin Profile</a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
-        <h3>at PSH - @Follett</h3>
-        <div>
-          <h3 class="subTitle">edutech</h3>
-          <div class="space">
-            <h4>MAR/2024</h4>
-            <h4>MAR/2024</h4>
-          </div>
-
+        <div class="jobDescription">
           <div>
-            <h4>MAR/2024</h4>
-            <h4>MAR/2024</h4>
+            <div class="flexing">
+              <h2>Product Designer</h2>
+              <div>
+                <h4 class="keyProduct">B2B</h4>
+                <h4 class="keyProduct">CORPORATION</h4>
+              </div>
+            </div>
+          </div>
+          <h3>at PSH - @Follett</h3>
+          <div>
+            <h3 class="subTitle">edutech</h3>
+            <div class="space">
+              <h4>MAR/2024</h4>
+              <h4>MAR/2024</h4>
+            </div>
+
+            <div>
+              <h4>MAR/2024</h4>
+              <h4>MAR/2024</h4>
+            </div>
+          </div>
+          <div class="flexing">
+            <h4 id="changeId">Aca cambia</h4>
+
+            <h4 class="keyProduct">SaaS</h4>
+            <h4 class="keyProduct">SAAS</h4>
+          </div>
+          <p>
+            Optimized the adoption process for course materials and supplies in
+            an app primarily focused on Concierge and Faculty users, easing
+            their workload and ultimately delivering value to students as the
+            end users.
+          </p>
+
+          <ul>
+            <li>
+              Guided the design process from concept to implementation,
+              facilitating smooth transitions and successful project outcomes.
+            </li>
+            <li>
+              Collaborated closely with leadership to transform feature requests
+              from ideation to delivery.
+            </li>
+            <li>
+              Created detailed handoffs for the development team, ensuring clear
+              and actionable design specifications.
+            </li>
+            <li>
+              Designed and documented components in Figma, providing
+              comprehensive guidelines to ensure consistency and ease of use.
+            </li>
+          </ul>
+
+          <div class="flexing">
+            <h4 class="keyProduct">Product Delivery</h4>
+            <h4 class="keyProduct">UX Design</h4>
+            <h4 class="keyProduct">UX Research</h4>
+            <h4 class="keyProduct">User Testing</h4>
+            <h4 class="keyProduct">User Interviews</h4>
+            <h4 class="keyProduct">UI Design</h4>
+            <h4 class="keyProduct">Prototype</h4>
+            <h4 class="keyProduct">Interaction Design</h4>
+            <h4 class="keyProduct">Figma</h4>
+            <h4 class="keyProduct">Design System</h4>
+            <h4 class="keyProduct">FigJam</h4>
+            <h4 class="keyProduct">UX Writing</h4>
+            <h4 class="keyProduct">Visual Design</h4>
+            <h4 class="keyProduct">Design Thinking</h4>
+            <h4 class="keyProduct">Agile</h4>
           </div>
         </div>
-        <div class="space">
-          <h4 id="changeId">Aca cambia</h4>
-
-          <h4 class="keyProduct">SAAS</h4>
-          <h4 class="keyProduct">SAAS</h4>
-        </div>
-        <p>
-          Optimized the adoption process for course materials and supplies in an
-          app primarily focused on Concierge and Faculty users, easing their
-          workload and ultimately delivering value to students as the end users.
-        </p>
-
-        <ul>
-          <li>
-            Guided the design process from concept to implementation,
-            facilitating smooth transitions and successful project outcomes.
-          </li>
-          <li>
-            Collaborated closely with leadership to transform feature requests
-            from ideation to delivery.
-          </li>
-          <li>
-            Created detailed handoffs for the development team, ensuring clear
-            and actionable design specifications.
-          </li>
-          <li>
-            Designed and documented components in Figma, providing comprehensive
-            guidelines to ensure consistency and ease of use.
-          </li>
-        </ul>
-
-        <div class="space">
-          <p class="tags">Product Delivery</p>
-          <p class="tags">UX Design</p>
-          <p class="tags">UX Research</p>
-          <p class="tags">User Testing</p>
-          <p class="tags">User Interviews</p>
-          <p class="tags">UI Design</p>
-          <p class="tags">Prototype</p>
-          <p class="tags">Interaction Design</p>
-          <p class="tags">Figma</p>
-          <p class="tags">Design System</p>
-          <p class="tags">FigJam</p>
-          <p class="tags">UX Writing</p>
-          <p class="tags">Visual Design</p>
-          <p class="tags">Design Thinking</p>
-          <p class="tags">Agile</p>
-        </div>
-      </div>
-    </div>
+      </section>
+    </article>
   </body>
 </html>
