Applying BEM to my code from Scratch

--- a/index.html
+++ b/index.html
@@ -15,19 +15,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div">
-    <h4>Hola Extraño ,gracias por visitar. Esto está WorkInProgress 🛠️👨🏻‍💻</h4>
-    <h4 class="translated">
-      Hey Xtranger, this is WorkInProgress 👨🏻‍💻, thanks for visiting! 🛠️
-    </h4>
-    <h4 class="separator">
-      ————————————————————————————————————————————————————————————————————————————————————
-    </h4>
-    <br />
-    <br />
-    <article>
-      <section>
-        <div class="flexing">
+    <div>
+      <h4>Hola Extraño ,gracias por visitar. Esto está WorkInProgress 🛠️👨🏻‍💻</h4>
+      <h4 class="translated">
+        Hey Xtranger, this is WorkInProgress 👨🏻‍💻, thanks for visiting! 🛠️
+      </h4>
+      <h4 class="separator">
+        ————————————————————————————————————————————————————————————————————————————————————
+      </h4>
+      <br />
+      <br />
+      <!-- BEM-ming here! -->
+      <div class="card">
+        <div class="card__header">
+          <h2 class="card__title">Product Designer</h2>
+          <span class="card__tag__company-size">B2B</span>
+          <span class="card__company-size">CORPORATION</span>
+        </div>
+        <h3 class="card__subtitle">at PSH - @Follett</h3>
+        <h3 class="card__subtitle">Edutech</h3>
+        <h4 class="card__industry"></h4>
+        <h4 class="card__key-products__type"></h4>
+        <p class="card__desc"></p>
+        <ul>
+          <li class="card__bullets"></li>
+          <li class="card__bullets"></li>
+          <li class="card__bullets"></li>
+        </ul>
+      </div>
+    </div>
+    <span class="card__tags__keywords">Tags</span>
+  </body>
+</html>
+
+<!-- <div class="flexing">
           <div>
             <h2>Lenin Cuadra</h2>
             <h3>PRODUCT DESIGNER UX/UI</h3>
@@ -79,7 +100,10 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div> -->
+
+<!-- Archived this  -->
+<!-- Archived this  
         <div class="jobDescription">
           <div>
             <div class="flexing">
@@ -154,6 +178,4 @@
           </div>
         </div>
       </section>
-    </article>
-  </body>
-</html>
+    </article>-->
