Adding Tokens to CSS with BEM

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <br />
       <!-- BEM-ming here! -->
       <div class="card">
-        <div class="card__header">
+        <div class="card__header ruler-p">
           <h2 class="card__title">Product Designer</h2>
           <span class="card__tag__company-size">B2B</span>
           <span class="card__company-size">CORPORATION</span>
