MY 1st refactor, BEM Refactor FTW WIP

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <br />
       <!-- BEM-ming here! -->
       <div class="card">
-        <div class="card__header ruler-p">
+        <div class="card__header">
           <h2 class="card__title">Product Designer</h2>
           <span class="card__tag__company-size">B2B</span>
           <span class="card__company-size">CORPORATION</span>
@@ -38,7 +38,7 @@
         <h4 class="card__key-products__type"></h4>
         <p class="card__desc"></p>
         <ul>
-          <li class="card__bullets"></li>
+          <li class="card__bullets card__bullets--highlighted"></li>
           <li class="card__bullets"></li>
           <li class="card__bullets"></li>
         </ul>
