Learning flexbox box going back to BEM because of scalable classes feels more like a priority now

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <br />
       <br />
       <!-- BEM-ming here! -->
-      <div class="card">
+      <div class="card-experience">
         <div class="card__header">
-          <h2 class="card__title">Product Designer</h2>
+          <h2 class="cardrole">Product Designer</h2>
           <span class="card__tag__company-size">B2B</span>
           <span class="card__company-size">CORPORATION</span>
         </div>
