Mi primer Card escrito con BEM en CSS esta listo

--- a/index.html
+++ b/index.html
@@ -26,179 +26,165 @@
       </h4>
       <br />
       <br />
-      <!-- BEM-ming here! -->
-      <div class="card-exp">
-        <div class="card-exp__header-wrapper">
-          <h2 class="card-exp__role">Product Designer</h2>
-          <span class="card-exp__business-tag card-exp__business-model">
-            B2B
-          </span>
-          <span class="card-exp__business-tag card-exp__company-size">
-            Corporation
-          </span>
-        </div>
-
-        <h3 class="card-exp__company-name">at PSH - @Follett</h3>
-        <div class="card-exp__industry-and-duration-wrapper">
-          <h3 class="card-exp__company-industry">Edutech</h3>
-          <span class="card-exp__company-starting-date">mar/2024</span>
-          <span class="card-exp__company-separator">|</span>
-          <span class="card-exp__company-ending-date">Present</span>
-        </div>
-        <div class="card-exp__prod-keywords-wrapper">
-          <h4 class="card-exp__prod-keywords">Key Designed Products</h4>
-          <h4 class="card-exp__prod-built">SaaS</h4>
-        </div>
-
-        <p class="card-exp__summary">
-          Paragraph Paragraph Paragraph Paragraph Paragraph Paragraph Paragraph
-          Paragraph Paragraph Paragraph Paragraph Paragraph
-        </p>
-
-        <ul class="card-exp__responsabilities__wrapper">
-          <li class="card-exp__responsabilities">List item #1</li>
-          <li class="card-exp__responsabilities">List item #2</li>
-          <li class="card-exp__responsabilities">List item #3</li>
-        </ul>
-
-        <div class="card-exp__keywords_wrapper">
-          <span class="card-exp__keyword">Tags #1</span>
-          <span class="card-exp__keyword">Tags #2</span>
-          <span class="card-exp__keyword">Tags #3</span>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
-
-<!-- <div class="flexing">
-          <div>
-            <h2>Lenin Cuadra</h2>
-            <h3>PRODUCT DESIGNER UX/UI</h3>
-            <h4 class="separator">———————————————</h4>
-            <h4 class="subTitle">4+ YEARS OF EXPERIENCE</h4>
+      <div class="job-experience-wrapper">
+        <!-- CARD #1 -->
+        <div class="card-exp">
+          <div class="card-exp__header-wrapper">
+            <h2 class="card-exp__role">Product Designer</h2>
+            <span
+              class="tag tag--primary card-exp__business-tag--highlight card-exp__business-model"
+            >
+              B2B
+            </span>
+            <span class="tag tag--primary">Corporation</span>
           </div>
-          <div>
-            <p>
-              <strong>I'm an experienced UX/UI and Product Design</strong>
-              professional, excelling in creative problem-solving. Grounded in
-              Design Thinking,
-              <strong>
-                I strategically craft meaningful user experiences.
-              </strong>
-            </p>
-            <p>
-              <strong>
-                Collaborate seamlessly with cross-functional teams
-              </strong>
-              engaging developers, designers, and product managers,
-              <strong>a holistic approach to product design.</strong>
-            </p>
-          </div>
-          <div>
-            <div>
-              <h3>Contact Info</h3>
-              <ul>
-                <li>
-                  <a
-                    href="mailto:leningraphic@gmail.com?subject=I'm%20reaching%20out%20to%20you,%20Lenin!"
-                  >
-                    leningraphic@gmail.com
-                  </a>
-                </li>
-                <li>
-                  <a href="tel:+5493513766049">549-3513766049</a>
-                </li>
-              </ul>
-            </div>
-            <div>
-              <h3>Portfolio</h3>
-              <ul>
-                <li>
-                  <a href="https://bit.ly/3BUoBSr">Website</a>
-                </li>
-                <li>
-                  <a href="https://bit.ly/3A6ygVI">Linkedin Profile</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div> -->
 
-<!-- Archived this  -->
-<!-- Archived this  
-        <div class="jobDescription">
-          <div>
-            <div class="flexing">
-              <h2>Product Designer</h2>
-              <div>
-                <h4 class="keyProduct">B2B</h4>
-                <h4 class="keyProduct">CORPORATION</h4>
-              </div>
-            </div>
+          <h3 class="card-exp__company-name">at PSH - @Follett</h3>
+          <div class="card-exp__industry-and-duration-wrapper">
+            <h3 class="card-exp__company-industry">Edutech</h3>
+            <span class="card-exp__company-starting-date">mar/2024</span>
+            <span class="card-exp__company-separator">|</span>
+            <span
+              class="card-exp__company-ending-date card-exp__company-ending-date--present"
+            >
+              Present
+            </span>
           </div>
-          <h3>at PSH - @Follett</h3>
-          <div>
-            <h3 class="subTitle">edutech</h3>
-            <div class="space">
-              <h4>MAR/2024</h4>
-              <h4>MAR/2024</h4>
-            </div>
+          <div class="card-exp__prod-keywords-wrapper">
+            <h4 class="card-exp__prod-keywords">Key Designed Products</h4>
+            <h4 class="tag card-exp__prod-built">SaaS</h4>
+          </div>
 
-            <div>
-              <h4>MAR/2024</h4>
-              <h4>MAR/2024</h4>
-            </div>
-          </div>
-          <div class="flexing">
-            <h4 id="changeId">Aca cambia</h4>
-
-            <h4 class="keyProduct">SaaS</h4>
-            <h4 class="keyProduct">SAAS</h4>
-          </div>
-          <p>
+          <p class="card-exp__summary">
             Optimized the adoption process for course materials and supplies in
             an app primarily focused on Concierge and Faculty users, easing
             their workload and ultimately delivering value to students as the
             end users.
           </p>
 
-          <ul>
-            <li>
+          <ul class="card-exp__responsabilities__wrapper">
+            <li class="card-exp__responsabilities">
               Guided the design process from concept to implementation,
               facilitating smooth transitions and successful project outcomes.
             </li>
-            <li>
+            <li class="card-exp__responsabilities">
               Collaborated closely with leadership to transform feature requests
               from ideation to delivery.
             </li>
-            <li>
+            <li class="card-exp__responsabilities">
               Created detailed handoffs for the development team, ensuring clear
               and actionable design specifications.
             </li>
-            <li>
+            <li class="card-exp__responsabilities">
               Designed and documented components in Figma, providing
               comprehensive guidelines to ensure consistency and ease of use.
             </li>
+            <li class="card-exp__responsabilities">
+              I participated in the user interview process alongside the design
+              team; taking notes and defining the product based on research.
+            </li>
           </ul>
 
-          <div class="flexing">
-            <h4 class="keyProduct">Product Delivery</h4>
-            <h4 class="keyProduct">UX Design</h4>
-            <h4 class="keyProduct">UX Research</h4>
-            <h4 class="keyProduct">User Testing</h4>
-            <h4 class="keyProduct">User Interviews</h4>
-            <h4 class="keyProduct">UI Design</h4>
-            <h4 class="keyProduct">Prototype</h4>
-            <h4 class="keyProduct">Interaction Design</h4>
-            <h4 class="keyProduct">Figma</h4>
-            <h4 class="keyProduct">Design System</h4>
-            <h4 class="keyProduct">FigJam</h4>
-            <h4 class="keyProduct">UX Writing</h4>
-            <h4 class="keyProduct">Visual Design</h4>
-            <h4 class="keyProduct">Design Thinking</h4>
-            <h4 class="keyProduct">Agile</h4>
+          <div class="card-exp__keywords_wrapper">
+            <span class="tag tag--secondary">Product Delivery</span>
+            <span class="tag tag--secondary">UX Design</span>
+            <span class="tag tag--secondary">UX Research</span>
+            <span class="tag tag--secondary">User Testing</span>
+            <span class="tag tag--secondary">User Interviews</span>
+            <span class="tag tag--secondary">UI Design</span>
+            <span class="tag tag--secondary">Prototype</span>
+            <span class="tag tag--secondary">Interaction Design</span>
+            <span class="tag tag--secondary">Figma</span>
+            <span class="tag tag--secondary">Design System</span>
+            <span class="tag tag--secondary">FigJam</span>
+            <span class="tag tag--secondary">UX Writing</span>
+            <span class="tag tag--secondary">Visual Design</span>
+            <span class="tag tag--secondary">Design Thinking</span>
+            <span class="tag tag--secondary">Agile</span>
           </div>
         </div>
-      </section>
-    </article>-->
+        <!-- CARD #2 -->
+        <div class="card-exp">
+          <div class="card-exp__header-wrapper">
+            <h2 class="card-exp__role">Product Designer</h2>
+            <span
+              class="tag tag--primary card-exp__business-tag--highlight card-exp__business-model"
+            >
+              B2B2C
+            </span>
+            <span class="tag tag--primary">Startup</span>
+          </div>
+
+          <h3 class="card-exp__company-name">at Flevo</h3>
+          <div class="card-exp__industry-and-duration-wrapper">
+            <h3 class="card-exp__company-industry">Fintech / Edutech</h3>
+            <span class="card-exp__company-starting-date">jan/2023</span>
+            <span class="card-exp__company-separator">|</span>
+            <span class="card-exp__company-starting-date">dec/2023</span>
+          </div>
+          <div class="card-exp__prod-keywords-wrapper">
+            <h4 class="card-exp__prod-keywords">Key Designed Products</h4>
+            <h4 class="tag card-exp__prod-built">SaaS</h4>
+            <h4 class="tag card-exp__prod-built">Checkout</h4>
+            <h4 class="tag card-exp__prod-built">Loans</h4>
+            <h4 class="tag card-exp__prod-built">Funnel</h4>
+          </div>
+
+          <p class="card-exp__summary">
+            I defined and crafted user-centered UX/UI experiences for multiple
+            products with a strong focus on product mindset within a dynamic
+            startup environment.
+          </p>
+
+          <ul class="card-exp__responsabilities__wrapper">
+            <li class="card-exp__responsabilities">
+              Building different types of Checkout: Vendors, Students, and a
+              customized Button Checkout.
+            </li>
+            <li class="card-exp__responsabilities">
+              Designing and optimizing end-to-end customer acquisition funnels
+              to drive new customer acquisition.
+            </li>
+            <li class="card-exp__responsabilities">
+              I developed a robust cell component with dynamic data and behavior
+              to construct complex table
+            </li>
+            <li class="card-exp__responsabilities">
+              I created a robust cell component to build a complex table with
+              different type of data and behaviors.
+            </li>
+            <li class="card-exp__responsabilities">
+              Revamping and enhancing user experiences across multiple products,
+              including the checkout process, funnel, and SaaS application
+            </li>
+          </ul>
+
+          <div class="card-exp__keywords_wrapper">
+            <span class="tag tag--secondary">Product Discovery</span>
+            <span class="tag tag--secondary">Product Delivery</span>
+            <span class="tag tag--secondary">Product Roadmap</span>
+            <span class="tag tag--secondary">Product Marketing</span>
+            <span class="tag tag--secondary">UX Design</span>
+            <span class="tag tag--secondary">UX Research</span>
+            <span class="tag tag--secondary">User Testing</span>
+            <span class="tag tag--secondary">User Interviews</span>
+            <span class="tag tag--secondary">Clarity</span>
+            <span class="tag tag--secondary">Google Forms</span>
+            <span class="tag tag--secondary">UI Design</span>
+            <span class="tag tag--secondary">Prototype</span>
+            <span class="tag tag--secondary">Interaction Design</span>
+            <span class="tag tag--secondary">Figma</span>
+            <span class="tag tag--secondary">Design System</span>
+            <span class="tag tag--secondary">HTML/CSS</span>
+            <span class="tag tag--secondary">Workshop Facilitation</span>
+            <span class="tag tag--secondary">FigJam</span>
+            <span class="tag tag--secondary">UX Writing</span>
+            <span class="tag tag--secondary">Visual Design</span>
+            <span class="tag tag--secondary">Design Thinking</span>
+            <span class="tag tag--secondary">Agile</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
